AB#30133: Fix bugs-scrollbar,cancel changes button,null SuffixType

--- a/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Views/Shared/Components/ApplicationFormConfigWidget/Default.css
+++ b/applications/Unity.GrantManager/src/Unity.GrantManager.Web/Views/Shared/Components/ApplicationFormConfigWidget/Default.css
@@ -2,3 +2,11 @@
     color: var(--lpx-danger);
     border-color: var(--lpx-danger);
 }
+
+.other-config-scrollable-content {
+    max-height: calc(100vh - 300px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-right: 10px;
+    padding-bottom: 20px;
+}
